--- a/.github/workflows/website-integrity.yml
+++ b/.github/workflows/website-integrity.yml
@@ -13,28 +13,12 @@ jobs:
         uses: actions/checkout@v3
       - name: Fetch
         run: git fetch origin v3
-      - name: Use Node 18
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
-          cache: 'pnpm'
 
-      - name: Use PNPM
-        uses: pnpm/action-setup@v2.2.4
+      - name: Setup env
+        uses: the-guild-org/shared-config/setup@main
         with:
-          version: latest
-
-      - name: Cache Node Modules
-        uses: actions/cache@v3
-        id: node-modules-cache-website-integrity
-        with:
-          path: '**/node_modules'
-          key: ${{runner.os}}-18-node-modules-${{hashFiles('pnpm-lock.yaml')}}-${{hashFiles('patches/**/*')}}
-          restore-keys: |
-            ${{runner.os}}-18-node-modules-${{hashFiles('pnpm-lock.yaml')}}-${{hashFiles('patches/**/*')}}
-      - name: Install Dependencies using pnpm
-        run: pnpm install --ignore-engines --frozen-lockfile --immutable
-        if: steps.node-modules-cache-website-integrity.outputs.cache-hit != 'true'
+          nodeVersion: 18
+          packageManager: pnpm
 
       - name: Build Packages
         run: pnpm build
