make few more tests pass

--- a/packages/graphql-yoga/package.json
+++ b/packages/graphql-yoga/package.json
@@ -49,8 +49,7 @@
   },
   "dependencies": {
     "@envelop/core": "3.0.2",
-    "@envelop/parser-cache": "5.0.1",
-    "@envelop/validation-cache": "5.0.1",
+    "@graphql-tools/compat": "0.0.1-alpha-20221018165825-7d580e29",
     "@graphql-tools/graphql": "^0.0.1",
     "@graphql-tools/schema": "^9.0.0",
     "@graphql-typed-document-node/core": "^3.1.1",
@@ -58,12 +57,13 @@
     "@whatwg-node/fetch": "0.4.7",
     "@whatwg-node/server": "0.4.11",
     "dset": "^3.1.1",
+    "lru-cache": "^6.0.0",
     "tslib": "^2.3.1"
   },
   "devDependencies": {
-    "@envelop/disable-introspection": "4.0.1",
     "@envelop/live-query": "5.0.1",
     "@graphql-tools/utils": "^8.12.0",
+    "@types/lru-cache": "^5.1.1",
     "@types/node": "16.11.64",
     "graphql": "^16.0.1",
     "graphql-http": "^1.6.0",
