--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test:integration": "cross-env INTEGRATION_TEST=true jest --detectLeaks --logHeapUsage --forceExit",
     "release": "pnpm build && changeset publish",
     "start:docs": "pnpm workspace website dev",
-    "postinstall": "patch-package && husky install",
+    "postinstall": "husky install",
+    "fix-bin": "node scripts/fix-bin.js",
     "lint": "eslint --ignore-path .gitignore --ext ts,js,tsx,jsx .",
     "prettier": "prettier --ignore-path .prettierignore --write --list-different .",
     "prettier:check": "prettier --ignore-path .prettierignore --check .",
