--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "scripts": {
     "align-workspaces": "node scripts/align-workspaces.js",
     "prebuild": "rimraf packages/*/dist",
-    "check": "pnpm workspaces run check",
-    "build": "pnpm workspace @graphql-yoga/graphiql run build && pnpm workspace @graphql-yoga/render-graphiql run build && pnpm workspace graphql-yoga run generate-graphiql-html && bob build",
+    "check": "pnpm -r --filter=!example-deno run check",
+    "build": "pnpm --filter=@graphql-yoga/graphiql run build && pnpm --filter=@graphql-yoga/render-graphiql run build && pnpm --filter=graphql-yoga run generate-graphiql-html && bob build",
     "test": "jest --detectOpenHandles --detectLeaks",
     "test:integration": "cross-env INTEGRATION_TEST=true jest --detectLeaks --logHeapUsage --forceExit",
     "release": "pnpm build && changeset publish",
-    "start:docs": "pnpm workspace website dev",
+    "start:docs": "pnpm --filter=website dev",
     "postinstall": "husky install",
     "fix-bin": "node scripts/fix-bin.js",
     "lint": "eslint --ignore-path .gitignore --ext ts,js,tsx,jsx .",
