--- a/packages/graphql-yoga/package.json
+++ b/packages/graphql-yoga/package.json
@@ -63,6 +63,8 @@
     "@envelop/disable-introspection": "4.0.1",
     "@envelop/live-query": "5.0.1",
     "@graphql-tools/utils": "^8.12.0",
+    "@n1ru4l/in-memory-live-query-store": "0.10.0",
+    "@repeaterjs/repeater": "^3.0.4",
     "@types/node": "16.11.64",
     "graphql": "^16.0.1",
     "graphql-http": "^1.6.0",
