--- a/packages/graphql-yoga/package.json
+++ b/packages/graphql-yoga/package.json
@@ -63,6 +63,7 @@
     "@envelop/disable-introspection": "4.0.1",
     "@envelop/live-query": "5.0.1",
     "@graphql-tools/utils": "^8.12.0",
+    "@jest/globals": "^29.2.1",
     "@n1ru4l/in-memory-live-query-store": "0.10.0",
     "@repeaterjs/repeater": "^3.0.4",
     "@types/node": "16.11.64",
