--- a/packages/subscription/package.json
+++ b/packages/subscription/package.json
@@ -61,10 +61,13 @@
   },
   "dependencies": {
     "@graphql-yoga/typed-event-target": "^1.0.0-next.0",
-    "@whatwg-node/events": "0.0.2",
     "@repeaterjs/repeater": "^3.0.4",
+    "@whatwg-node/events": "0.0.2",
     "tslib": "^2.3.1"
   },
   "type": "module",
-  "sideEffects": true
+  "sideEffects": true,
+  "devDependencies": {
+    "ioredis-mock": "8.2.2"
+  }
 }
