--- a/packages/subscription/package.json
+++ b/packages/subscription/package.json
@@ -68,6 +68,7 @@
   "type": "module",
   "sideEffects": true,
   "devDependencies": {
+    "@types/ioredis-mock": "5.6.0",
     "ioredis-mock": "8.2.2"
   }
 }
