--- a/.github/workflows/algolia-publish.yml
+++ b/.github/workflows/algolia-publish.yml
@@ -23,10 +23,10 @@ jobs:
         run: pnpm build
 
       - name: Typecheck
-        run: pnpm workspace website build
+        run: pnpm --filter website build
 
       - name: Algolia push
-        run: pnpm workspace website algolia-sync
+        run: pnpm --filter website algolia-sync
         env:
           ALGOLIA_APP_ID: ${{ secrets.ALGOLIA_APP_ID }}
           ALGOLIA_ADMIN_API_KEY: ${{ secrets.ALGOLIA_ADMIN_API_KEY }}
