--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,7 +58,7 @@ jobs:
         run: pnpm build
 
       - name: Run Tests
-        run: pnpm workspace example-node-esm run test
+        run: pnpm --filter example-node-esm run test
 
   typecheck:
     runs-on: ubuntu-latest
