--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "denoify": "1.2.1",
     "eslint": "^8.21.0",
     "execa": "5.1.1",
+    "formdata-node": "4.4.1",
     "graphql": "^16.5.0",
     "husky": "^8.0.0",
     "jest": "^29.0.0",
