--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "release": "pnpm build && changeset publish",
     "start:docs": "pnpm --filter=website dev",
     "postinstall": "husky install",
-    "fix-bin": "node scripts/fix-bin.js",
     "lint": "eslint --ignore-path .gitignore --ext ts,js,tsx,jsx .",
     "prettier": "prettier --ignore-path .prettierignore --write --list-different .",
     "prettier:check": "prettier --ignore-path .prettierignore --check .",
@@ -54,6 +53,7 @@
     "packages/client/*",
     "packages/event-target/*",
     "examples/**/*",
+    "!(examples/**/dist)",
     "benchmark/*",
     "website",
     "e2e"
@@ -88,7 +88,6 @@
     "jest": "^29.0.0",
     "js-yaml": "4.1.0",
     "lint-staged": "^13.0.3",
-    "patch-package": "^6.4.7",
     "postinstall-postinstall": "^2.1.0",
     "prettier": "^2.7.1",
     "pretty-quick": "^3.1.2",
