--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -4,6 +4,8 @@ packages:
   - packages/client/*
   - packages/event-target/*
   - examples/**/*
+  - "!examples/**/dist"
+  - "!packages/**/dist"
   - benchmark/*
   - website
   - e2e
