--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "packages/client/*",
     "packages/event-target/*",
     "examples/**/*",
-    "!(examples/**/dist)",
+    "!packages/**/dist",
+    "!examples/**/dist",
     "benchmark/*",
     "website",
     "e2e"
