No Cadillac, no perms, you can't see

--- a/examples/bun/package.json
+++ b/examples/bun/package.json
@@ -10,5 +10,8 @@
     "bun-types": "^0.1.5",
     "graphql-yoga": "3.0.0-next.6",
     "graphql": "16.6.0"
+  },
+  "devDependencies": {
+    "@whatwg-node/fetch": "0.4.7"
   }
 }
