--- a/examples/cloudflare-modules/package.json
+++ b/examples/cloudflare-modules/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "typescript": "4.8.4",
-    "wrangler": "2.1.10"
+    "wrangler": "2.1.10",
+    "@cloudflare/workers-types": "3.17.0"
   }
 }
