--- a/package.json
+++ b/package.json
@@ -109,7 +109,8 @@
       "@changesets/assemble-release-plan@5.2.1": "patches/@changesets__assemble-release-plan@5.2.1.patch",
       "@graphiql/react@0.13.3": "patches/@graphiql__react@0.13.3.patch",
       "@sveltejs/kit@1.0.0-next.511": "patches/@sveltejs__kit@1.0.0-next.511.patch",
-      "@types/ioredis-mock@5.6.0": "patches/@types__ioredis-mock@5.6.0.patch"
+      "@types/ioredis-mock@5.6.0": "patches/@types__ioredis-mock@5.6.0.patch",
+      "formdata-node@5.0.0": "patches/formdata-node@5.0.0.patch"
     }
   }
 }
