--- a/examples/hackernews/package.json
+++ b/examples/hackernews/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development ts-node-dev --exit-child --respawn src/main.ts",
     "start": "ts-node src/main.ts",
-    "check": "tsc --pretty --noEmit"
+    "check": "tsc --pretty --noEmit",
+    "postinstall": "prisma generate"
   },
   "keywords": [],
   "author": "",
