--- a/examples/nextjs-auth/package.json
+++ b/examples/nextjs-auth/package.json
@@ -15,7 +15,8 @@
     "next-auth": "4.13.0",
     "next": "12.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "tslib": "2.4.0"
   },
   "devDependencies": {
     "@types/react": "18.0.21",
