--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "prettier": "prettier --ignore-path .prettierignore --write --list-different .",
     "prettier:check": "prettier --ignore-path .prettierignore --check .",
     "build-website": "pnpm build && cd website && pnpm build",
-    "denoify": "denoify"
+    "denoify": "denoify",
+    "changeset": "changeset"
   },
   "lint-staged": {
     "packages/**/src/**/*.{ts,tsx}": [
@@ -96,7 +97,8 @@
     "supertest": "^6.1.6",
     "ts-jest": "^29.0.0",
     "typescript": "4.8.4",
-    "weak-napi": "2.0.2"
+    "weak-napi": "2.0.2",
+    "wrangler": "2.1.12"
   },
   "overrides": {
     "graphql": "16.6.0",
