--- a/examples/sveltekit/package.json
+++ b/examples/sveltekit/package.json
@@ -37,6 +37,7 @@
 	"dependencies": {
 		"@envelop/graphql-jit": "5.0.1",
 		"graphql-yoga": "3.0.0-next.6",
+		"@graphql-yoga/render-graphiql": "3.0.0-next.6",
 		"graphql": "16.6.0"
 	},
 	"type": "module"
