--- a/examples/live-query/package.json
+++ b/examples/live-query/package.json
@@ -14,7 +14,9 @@
   },
   "dependencies": {
     "@envelop/live-query": "5.0.1",
+    "@n1ru4l/graphql-live-query": "0.10.0",
     "@n1ru4l/in-memory-live-query-store": "0.10.0",
+    "@graphql-tools/utils": "8.12.0",
     "graphql-yoga": "3.0.0-next.6",
     "graphql": "16.6.0"
   }
