use overrides instead of resolutions

--- a/package.json
+++ b/package.json
@@ -98,7 +98,7 @@
     "typescript": "4.8.4",
     "weak-napi": "2.0.2"
   },
-  "resolutions": {
+  "overrides": {
     "graphql": "16.6.0",
     "@envelop/core": "3.0.2",
     "@changesets/assemble-release-plan": "5.2.1",
