--- a/package.json
+++ b/package.json
@@ -100,18 +100,19 @@
     "weak-napi": "2.0.2",
     "wrangler": "2.1.12"
   },
-  "overrides": {
+  "resolutions": {
     "graphql": "16.6.0",
     "@envelop/core": "3.0.2",
     "@changesets/assemble-release-plan": "5.2.1",
-    "@sveltejs/kit": "1.0.0-next.520"
+    "@sveltejs/kit": "1.0.0-next.511"
   },
   "pnpm": {
     "patchedDependencies": {
       "@changesets/assemble-release-plan@5.2.1": "patches/@changesets__assemble-release-plan@5.2.1.patch",
       "@graphiql/react@0.13.3": "patches/@graphiql__react@0.13.3.patch",
       "@types/ioredis-mock@5.6.0": "patches/@types__ioredis-mock@5.6.0.patch",
-      "formdata-node@4.4.1": "patches/formdata-node@4.4.1.patch"
+      "formdata-node@4.4.1": "patches/formdata-node@4.4.1.patch",
+      "@sveltejs/kit@1.0.0-next.511": "patches/@sveltejs__kit@1.0.0-next.511.patch"
     }
   }
 }
