--- a/packages/plugins/apollo-inline-trace/package.json
+++ b/packages/plugins/apollo-inline-trace/package.json
@@ -47,5 +47,8 @@
     "@envelop/on-resolve": "^2.0.2",
     "@whatwg-node/fetch": "0.4.7",
     "apollo-reporting-protobuf": "^3.3.2"
+  },
+  "devDependencies": {
+    "graphql-yoga": "^3.0.0-next.6"
   }
 }
