ignore pnpm-lock and prettier

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -4,8 +4,8 @@ packages:
   - packages/client/*
   - packages/event-target/*
   - examples/**/*
-  - "!examples/**/dist"
-  - "!packages/**/dist"
+  - '!examples/**/dist'
+  - '!packages/**/dist'
   - benchmark/*
   - website
   - e2e
