--- a/.prettierignore
+++ b/.prettierignore
@@ -7,6 +7,7 @@ coverage/
 examples/sveltekit
 **/generated/**
 .next
+pnpm-lock.yaml
 
 # Custom Generated files
 packages/graphql-yoga/src/graphiql-html.ts
