Migrate from Yarn to PNPM (#1907)
* 50 Cent

* No yarn just 50 cent

* Chill

* Go

* Use shared actions

* Go

* update lockfile

* lets try

* builds locally

* works mostly

* one more

* does it work

* Go

* Go

* aa

* Yes

* No Cadillac, no perms, you can't see

* GO GO GO GO

* Go

* Go

* Fix snapshot workflow

* go go

* More

* use overrides instead of resolutions

* update sveltekit

* Fix snapshot

* Yes

* go

* drop unused imports from bun

* use pnpm --filter over workspace

* bump whatwg-node/server

* apollo-inline-trace needs yoga as dev dep

* ignore pnpm-lock and prettier

Co-authored-by: Saihajpreet Singh <saihajpreet.singh@gmail.com>
Co-authored-by: enisdenjo <badurinadenis@gmail.com>

--- a/.github/workflows/algolia-publish.yml
+++ b/.github/workflows/algolia-publish.yml
@@ -17,15 +17,16 @@ jobs:
         uses: the-guild-org/shared-config/setup@main
         with:
           nodeVersion: 18
+          packageManager: pnpm
 
       - name: Build Packages
-        run: yarn build
+        run: pnpm build
 
       - name: Typecheck
-        run: yarn workspace website build
+        run: pnpm --filter website build
 
       - name: Algolia push
-        run: yarn workspace website algolia-sync
+        run: pnpm --filter website algolia-sync
         env:
           ALGOLIA_APP_ID: ${{ secrets.ALGOLIA_APP_ID }}
           ALGOLIA_ADMIN_API_KEY: ${{ secrets.ALGOLIA_ADMIN_API_KEY }}
@@ -33,7 +34,7 @@ jobs:
           SITE_URL: https://www.graphql-yoga.com/
 
       - name: Format
-        run: yarn prettier
+        run: pnpm prettier
 
       - name: Compare
         run: git diff website/algolia-lockfile.json
