--- a/.github/workflows/algolia-integrity.yml
+++ b/.github/workflows/algolia-integrity.yml
@@ -11,27 +11,30 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+
       - name: Fetch
         run: git fetch origin v3
+
       - name: Setup env
         uses: the-guild-org/shared-config/setup@main
         with:
           nodeVersion: 18
+          packageManager: pnpm
 
       - name: Build Packages
-        run: yarn build
+        run: pnpm build
 
       - name: Typecheck
-        run: yarn workspace website build
+        run: pnpm --filter website build
 
       - name: Algolia generate
-        run: yarn workspace website algolia-sync
+        run: pnpm --filter website algolia-sync
         env:
           ALGOLIA_DRY_RUN: true
           SITE_URL: https://www.graphql-yoga.com/
 
       - name: Format
-        run: yarn prettier
+        run: pnpm prettier
 
       - name: Compare
         run: git diff origin/${{ github.base_ref }}.. -- website/algolia-lockfile.json
