--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -19,13 +19,14 @@ jobs:
         uses: the-guild-org/shared-config/setup@main
         with:
           nodeVersion: 18
+          packageManager: pnpm
 
       - name: Build Packages
-        run: yarn build
+        run: pnpm build
 
       - name: Start Yoga Server
         working-directory: ./benchmark/hello-world
-        run: yarn start & sleep 5s
+        run: pnpm start & sleep 5s
         env:
           NODE_NO_WARNINGS: true
           NODE_ENV: production
