--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,8 +15,9 @@ jobs:
     name: unit / nodejs v${{ matrix.node-version }}
     uses: the-guild-org/shared-config/.github/workflows/ci-node-matrix.yml@main
     with:
-      script: 'yarn build && yarn test'
+      script: 'pnpm build && pnpm test'
       nodeVersions: '[14,16,18]'
+      packageManager: pnpm
 
   integration:
     name: integration / nodejs v${{ matrix.node-version }}
@@ -29,29 +30,17 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
-      - name: Use Node ${{ matrix.node-version }}
-        uses: actions/setup-node@master
+      - uses: the-guild-org/shared-config/setup@main
+        name: setup env
         with:
-          node-version: ${{ matrix.node-version }}
-          cache: 'yarn'
-
-      - name: Cache Node Modules
-        uses: actions/cache@v3
-        id: node-modules-cache-test-node
-        with:
-          path: '**/node_modules'
-          key: ${{runner.os}}-${{ matrix.node-version }}-node-modules-${{hashFiles('yarn.lock')}}-${{hashFiles('patches/**/*')}}
-          restore-keys: |
-            ${{runner.os}}-${{ matrix.node-version }}-node-modules-${{hashFiles('yarn.lock')}}-${{hashFiles('patches/**/*')}}
-      - name: Install Dependencies using Yarn
-        run: yarn install --ignore-engines --frozen-lockfile --immutable
-        if: steps.node-modules-cache-test-node.outputs.cache-hit != 'true'
+          nodeVersion: ${{ matrix.node-version }}
+          packageManager: pnpm
 
       - name: Build Packages
-        run: yarn build
+        run: pnpm build
 
       - name: Run Tests
-        run: yarn test:integration --ci
+        run: pnpm test:integration --ci
 
   esm:
     runs-on: ubuntu-latest
@@ -63,12 +52,13 @@ jobs:
         uses: the-guild-org/shared-config/setup@main
         with:
           nodeVersion: 18
+          packageManager: pnpm
 
       - name: Build Packages
-        run: yarn build
+        run: pnpm build
 
       - name: Run Tests
-        run: yarn workspace example-node-esm run test
+        run: pnpm --filter example-node-esm run test
 
   typecheck:
     runs-on: ubuntu-latest
@@ -80,6 +70,7 @@ jobs:
         uses: the-guild-org/shared-config/setup@main
         with:
           nodeVersion: 18
+          packageManager: pnpm
 
       - name: Setup Bun Runtime
         uses: antongolub/action-setup-bun@v1
@@ -90,13 +81,13 @@ jobs:
           deno-version: v1.x
 
       - name: Build Packages
-        run: yarn build
+        run: pnpm build
 
       - name: Typecheck
-        run: yarn run check
+        run: pnpm run check
 
       - name: Test ESM & CJS exports integrity
-        run: yarn bob check
+        run: pnpm bob check
 
       - name: Prettier
-        run: yarn prettier:check
+        run: pnpm prettier:check
