--- a/package.json
+++ b/package.json
@@ -2,19 +2,21 @@
   "name": "graphql-yoga-monorepo",
   "private": true,
   "scripts": {
+    "align-workspaces": "node scripts/align-workspaces.js",
     "prebuild": "rimraf packages/*/dist",
-    "check": "yarn workspaces run check",
-    "build": "yarn workspace @graphql-yoga/graphiql run build && yarn workspace @graphql-yoga/render-graphiql run build && yarn workspace graphql-yoga run generate-graphiql-html && bob build",
+    "check": "pnpm -r --filter=!example-deno run check",
+    "build": "pnpm --filter=@graphql-yoga/graphiql run build && pnpm --filter=@graphql-yoga/render-graphiql run build && pnpm --filter=graphql-yoga run generate-graphiql-html && bob build",
     "test": "jest --detectOpenHandles --detectLeaks",
     "test:integration": "cross-env INTEGRATION_TEST=true jest --detectLeaks --logHeapUsage --forceExit",
-    "release": "yarn build && changeset publish",
-    "start:docs": "yarn workspace website dev",
-    "postinstall": "patch-package && husky install",
+    "release": "pnpm build && changeset publish",
+    "start:docs": "pnpm --filter=website dev",
+    "postinstall": "husky install",
     "lint": "eslint --ignore-path .gitignore --ext ts,js,tsx,jsx .",
     "prettier": "prettier --ignore-path .prettierignore --write --list-different .",
     "prettier:check": "prettier --ignore-path .prettierignore --check .",
-    "build-website": "yarn build && cd website && yarn build",
-    "denoify": "denoify"
+    "build-website": "pnpm build && cd website && pnpm build",
+    "denoify": "denoify",
+    "changeset": "changeset"
   },
   "lint-staged": {
     "packages/**/src/**/*.{ts,tsx}": [
@@ -52,6 +54,8 @@
     "packages/client/*",
     "packages/event-target/*",
     "examples/**/*",
+    "!packages/**/dist",
+    "!examples/**/dist",
     "benchmark/*",
     "website",
     "e2e"
@@ -80,11 +84,12 @@
     "denoify": "1.2.1",
     "eslint": "^8.21.0",
     "execa": "5.1.1",
+    "formdata-node": "4.4.1",
     "graphql": "^16.5.0",
     "husky": "^8.0.0",
     "jest": "^29.0.0",
+    "js-yaml": "4.1.0",
     "lint-staged": "^13.0.3",
-    "patch-package": "^6.4.7",
     "postinstall-postinstall": "^2.1.0",
     "prettier": "^2.7.1",
     "pretty-quick": "^3.1.2",
@@ -92,10 +97,20 @@
     "supertest": "^6.1.6",
     "ts-jest": "^29.0.0",
     "typescript": "4.8.4",
-    "weak-napi": "2.0.2"
+    "weak-napi": "2.0.2",
+    "wrangler": "2.1.12"
   },
   "resolutions": {
     "graphql": "16.6.0",
-    "@envelop/core": "3.0.2"
+    "@envelop/core": "3.0.2",
+    "@changesets/assemble-release-plan": "5.2.1"
+  },
+  "pnpm": {
+    "patchedDependencies": {
+      "@changesets/assemble-release-plan@5.2.1": "patches/@changesets__assemble-release-plan@5.2.1.patch",
+      "@graphiql/react@0.13.3": "patches/@graphiql__react@0.13.3.patch",
+      "@types/ioredis-mock@5.6.0": "patches/@types__ioredis-mock@5.6.0.patch",
+      "formdata-node@4.4.1": "patches/formdata-node@4.4.1.patch"
+    }
   }
 }
