--- a/packages/graphql-yoga/package.json
+++ b/packages/graphql-yoga/package.json
@@ -55,7 +55,7 @@
     "@graphql-typed-document-node/core": "^3.1.1",
     "@graphql-yoga/subscription": "^3.0.0-next.0",
     "@whatwg-node/fetch": "0.4.7",
-    "@whatwg-node/server": "0.4.11",
+    "@whatwg-node/server": "0.4.12",
     "dset": "^3.1.1",
     "tslib": "^2.3.1"
   },
@@ -63,6 +63,9 @@
     "@envelop/disable-introspection": "4.0.1",
     "@envelop/live-query": "5.0.1",
     "@graphql-tools/utils": "^8.12.0",
+    "@jest/globals": "^29.2.1",
+    "@n1ru4l/in-memory-live-query-store": "0.10.0",
+    "@repeaterjs/repeater": "^3.0.4",
     "@types/node": "16.11.64",
     "graphql": "^16.0.1",
     "graphql-http": "^1.6.0",
