--- a/packages/plugins/sofa/package.json
+++ b/packages/plugins/sofa/package.json
@@ -49,7 +49,8 @@
     "access": "public"
   },
   "dependencies": {
-    "sofa-api": "0.14.0"
+    "sofa-api": "0.14.0",
+    "@graphql-tools/utils": "8.12.0"
   },
   "peerDependencies": {
     "graphql": "^15.2.0 || ^16.0.0",
