--- a/packages/graphql-yoga/package.json
+++ b/packages/graphql-yoga/package.json
@@ -51,6 +51,8 @@
     "@envelop/core": "3.0.2",
     "@envelop/parser-cache": "5.0.2",
     "@envelop/validation-cache": "5.0.2",
+    "@graphql-tools/compat": "0.0.1-alpha-20221018165825-7d580e29",
+    "@graphql-tools/graphql": "^0.0.1",
     "@graphql-tools/schema": "^9.0.0",
     "@graphql-typed-document-node/core": "^3.1.1",
     "@graphql-yoga/subscription": "^3.0.0-next.0",
