feat: use custom executor

--- a/packages/graphql-yoga/package.json
+++ b/packages/graphql-yoga/package.json
@@ -51,6 +51,7 @@
     "@envelop/core": "3.0.2",
     "@envelop/parser-cache": "5.0.2",
     "@envelop/validation-cache": "5.0.2",
+    "@graphql-tools/executor": "^0.0.1",
     "@graphql-tools/schema": "^9.0.0",
     "@graphql-typed-document-node/core": "^3.1.1",
     "@graphql-yoga/subscription": "^3.0.0-next.0",
