--- a/website/package.json
+++ b/website/package.json
@@ -14,21 +14,21 @@
   },
   "devDependencies": {
     "@theguild/algolia": "1.0.1",
-    "@theguild/tailwind-config": "0.2.0",
+    "@theguild/tailwind-config": "0.2.1",
     "@types/node": "18.11.7",
     "@types/react": "18.0.23",
     "cross-env": "7.0.3",
-    "fast-xml-parser": "^4.0.7",
+    "fast-xml-parser": "4.0.11",
     "typescript": "4.8.4"
   },
   "dependencies": {
-    "@theguild/components": "4.2.7",
+    "@theguild/components": "4.2.8-alpha-20221027142121-9cd5de7",
     "clsx": "1.2.1",
     "graphql": "16.6.0",
     "next": "12.3.1",
     "next-sitemap": "3.1.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.4.0"
+    "react-icons": "4.6.0"
   }
 }
