--- a/website/package.json
+++ b/website/package.json
@@ -16,13 +16,13 @@
     "@theguild/algolia": "1.0.1",
     "@theguild/tailwind-config": "0.2.1",
     "@types/node": "18.11.7",
-    "@types/react": "18.0.23",
+    "@types/react": "18.0.24",
     "cross-env": "7.0.3",
     "fast-xml-parser": "4.0.11",
     "typescript": "4.8.4"
   },
   "dependencies": {
-    "@theguild/components": "4.2.8-alpha-20221027142121-9cd5de7",
+    "@theguild/components": "4.2.8",
     "clsx": "1.2.1",
     "graphql": "16.6.0",
     "next": "12.3.1",
