--- a/renovate.json
+++ b/renovate.json
@@ -33,8 +33,7 @@
     "**/__tests__/**",
     "**/test/**",
     "**/tests/**",
-    "**/__fixtures__/**",
-    "examples/defer-stream/**"
+    "**/__fixtures__/**"
   ],
   "baseBranches": ["v2", "v3"]
 }
