--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,7 @@ jobs:
         run: pnpm build
 
       - name: Run Tests
-        run: pnpm test:integration
+        run: pnpm test:integration --ci
 
   leaks:
     name: leaks / nodejs v${{ matrix.node-version }}
@@ -63,7 +63,11 @@ jobs:
         run: pnpm build
 
       - name: Run Tests
-        run: pnpm test:leaks
+        uses: nick-fields/retry@v2
+        with:
+          timeout_minutes: 10
+          max_attempts: 3
+          command: pnpm test:leaks --ci
 
   esm:
     runs-on: ubuntu-latest
