--- a/examples/defer-stream/package.json
+++ b/examples/defer-stream/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "graphql-yoga": "3.0.0-next.8",
-    "graphql": "16.0.0-experimental-stream-defer.5"
+    "graphql": "16.6.0"
   },
   "devDependencies": {
     "ts-node": "10.8.1",
