--- a/packages/graphql-yoga/package.json
+++ b/packages/graphql-yoga/package.json
@@ -51,7 +51,7 @@
     "@envelop/core": "3.0.3",
     "@envelop/parser-cache": "5.0.3",
     "@envelop/validation-cache": "5.0.3",
-    "@graphql-tools/executor": "0.0.3-alpha-20221101131317-20a4af5d",
+    "@graphql-tools/executor": "^0.0.3",
     "@graphql-tools/schema": "^9.0.0",
     "@graphql-typed-document-node/core": "^3.1.1",
     "@graphql-yoga/subscription": "^3.0.0-next.0",
