--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "prebuild": "rimraf packages/*/dist",
     "check": "pnpm -r --filter=!example-deno run check",
     "build": "pnpm --filter=@graphql-yoga/graphiql run build && pnpm --filter=@graphql-yoga/render-graphiql run build && pnpm --filter=graphql-yoga run generate-graphiql-html && bob build",
-    "test": "jest --detectOpenHandles --detectLeaks",
-    "test:integration": "cross-env INTEGRATION_TEST=true jest --detectLeaks --logHeapUsage --forceExit",
+    "test": "jest --detectOpenHandles",
+    "test:integration": "cross-env INTEGRATION_TEST=true jest --detectOpenHandles",
+    "test:leaks": "LEAKS_TEST=true pnpm test --detectLeaks --logHeapUsage --forceExit; cross-env INTEGRATION_TEST=true jest --detectLeaks --logHeapUsage --forceExit",
     "release": "pnpm build && changeset publish",
     "start:docs": "pnpm --filter=website dev",
     "postinstall": "husky install",
