--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,7 @@ jobs:
         run: pnpm build
 
       - name: Run Tests
-        run: pnpm test:integration --ci
+        run: pnpm test:integration
 
   leaks:
     name: leaks / nodejs v${{ matrix.node-version }}
@@ -75,7 +75,7 @@ jobs:
         run: yarn build
 
       - name: Run Tests
-        run: yarn test:leaks --ci
+        run: pnpm test:leaks
 
   esm:
     runs-on: ubuntu-latest
