--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "check": "pnpm -r --filter=!example-deno run check",
     "build": "pnpm --filter=@graphql-yoga/graphiql run build && pnpm --filter=@graphql-yoga/render-graphiql run build && pnpm --filter=graphql-yoga run generate-graphiql-html && bob build",
     "test": "jest --detectOpenHandles",
-    "test:integration": "cross-env INTEGRATION_TEST=true jest --detectOpenHandles --forceExit",
+    "test:integration": "cross-env INTEGRATION_TEST=true jest --forceExit",
     "test:leaks": "LEAKS_TEST=true pnpm test --detectLeaks --logHeapUsage; LEAKS_TEST=true pnpm test:integration --detectLeaks --logHeapUsage",
     "release": "pnpm build && changeset publish",
     "start:docs": "pnpm --filter=website dev",
