--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,30 @@ jobs:
         run: pnpm build
 
       - name: Run Tests
-        run: pnpm test:integration --ci
+        run: pnpm test:integration
+
+  leaks:
+    name: leaks / nodejs v${{ matrix.node-version }}
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [14, 16, 18]
+      fail-fast: false
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+
+      - uses: the-guild-org/shared-config/setup@main
+        name: setup env
+        with:
+          nodeVersion: ${{ matrix.node-version }}
+          packageManager: pnpm
+
+      - name: Build Packages
+        run: pnpm build
+
+      - name: Run Tests
+        run: pnpm test:leaks
 
   esm:
     runs-on: ubuntu-latest
