--- a/packages/client/urql-exchange/package.json
+++ b/packages/client/urql-exchange/package.json
@@ -49,7 +49,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@graphql-tools/url-loader": "7.16.8",
+    "@graphql-tools/url-loader": "7.16.9-alpha-20221102014640-efd65af0",
     "@graphql-tools/utils": "8.13.1",
     "tslib": "^2.4.0"
   },
