--- a/examples/defer-stream/package.json
+++ b/examples/defer-stream/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "graphql-yoga": "3.0.0-next.9",
+    "@graphql-yoga/render-graphiql": "3.0.0-next.9",
     "graphql": "16.6.0"
   },
   "devDependencies": {
