--- a/packages/plugins/apq/package.json
+++ b/packages/plugins/apq/package.json
@@ -44,6 +44,7 @@
     "tiny-lru": "^10.0.0"
   },
   "peerDependencies": {
+    "@graphql-tools/utils": "^9.0.1",
     "graphql-yoga": "^3.0.0-next.9"
   },
   "type": "module"
