--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,7 +54,7 @@ jobs:
         run: pnpm build
 
       - name: Run Tests
-        run: pnpm test --ci
+        run: pnpm run test --ci
 
   integration:
     name: integration / nodejs v${{ matrix.node-version }} / graphql v${{ matrix.graphql-version }}
