--- a/packages/plugins/persisted-operations/package.json
+++ b/packages/plugins/persisted-operations/package.json
@@ -40,6 +40,7 @@
     "access": "public"
   },
   "peerDependencies": {
+    "@graphql-tools/utils": "^9.0.1",
     "graphql-yoga": "^3.0.0-next.9"
   },
   "devDependencies": {
