--- a/packages/plugins/defer-stream/package.json
+++ b/packages/plugins/defer-stream/package.json
@@ -40,7 +40,11 @@
     "access": "public"
   },
   "peerDependencies": {
+    "graphql": "^15.2.0 || ^16.0.0",
     "graphql-yoga": "^3.0.0-next.9"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "@graphql-tools/utils": "^9.0.1"
+  }
 }
