--- a/packages/graphql-yoga/package.json
+++ b/packages/graphql-yoga/package.json
@@ -73,6 +73,7 @@
     "graphql-http": "^1.6.0",
     "graphql-scalars": "1.20.0",
     "html-minifier-terser": "7.0.0",
+    "json-bigint-patch": "0.0.8",
     "puppeteer": "19.2.0"
   },
   "peerDependencies": {
