--- a/examples/defer-stream/package.json
+++ b/examples/defer-stream/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "graphql-yoga": "3.0.0-next.9",
     "@graphql-yoga/render-graphiql": "3.0.0-next.9",
-    "graphql": "16.6.0"
+    "graphql": "16.6.0",
+    "@graphql-yoga/plugin-defer-stream": "0.0.0"
   },
   "devDependencies": {
     "ts-node": "10.8.1",
