--- a/packages/plugins/apollo-inline-trace/package.json
+++ b/packages/plugins/apollo-inline-trace/package.json
@@ -49,5 +49,10 @@
   "dependencies": {
     "@envelop/on-resolve": "^2.0.2",
     "apollo-reporting-protobuf": "^3.3.2"
+  },
+  "devDependencies": {
+    "@envelop/on-resolve": "^2.0.2",
+    "@whatwg-node/fetch": "^0.5.1",
+    "graphql-yoga": "^3.0.0-next.9"
   }
 }
