--- a/packages/plugins/persisted-operations/package.json
+++ b/packages/plugins/persisted-operations/package.json
@@ -44,7 +44,8 @@
     "graphql-yoga": "^3.0.0-next.9"
   },
   "devDependencies": {
-    "@types/lru-cache": "7.10.9"
+    "@types/lru-cache": "7.10.9",
+    "graphql-yoga": "^3.0.0-next.9"
   },
   "type": "module"
 }
