Test and support older GraphQL.js versions (#1996)
* try out

* no frozen lockfile

* title job

* use "v" prefix

* version*

* cache pnpm with node version

* graphql matrix for all tests

* Fix

* Changeset

* Update lock file

* Weird

* use createGraphQLError

* dont depend on graphql version

* unused dep

* drop duplicate

* update lockfile

* Go

* peer deps as dev deps where necessary

* prettier

Co-authored-by: Arda TANRIKULU <ardatanrikulu@gmail.com>

--- a/packages/plugins/persisted-operations/package.json
+++ b/packages/plugins/persisted-operations/package.json
@@ -40,10 +40,12 @@
     "access": "public"
   },
   "peerDependencies": {
+    "@graphql-tools/utils": "^9.0.1",
     "graphql-yoga": "^3.0.0-next.9"
   },
   "devDependencies": {
-    "@types/lru-cache": "7.10.9"
+    "@types/lru-cache": "7.10.9",
+    "graphql-yoga": "^3.0.0-next.9"
   },
   "type": "module"
 }
