--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,29 +12,88 @@ on:
 
 jobs:
   unit:
-    name: unit / nodejs v${{ matrix.node-version }}
-    uses: the-guild-org/shared-config/.github/workflows/ci-node-matrix.yml@main
-    with:
-      script: 'pnpm build && pnpm test'
-      nodeVersions: '[14,16,18]'
-      packageManager: pnpm
-
-  integration:
-    name: integration / nodejs v${{ matrix.node-version }}
+    name: unit / nodejs v${{ matrix.node-version }} / graphql v${{ matrix.graphql-version }}
     runs-on: ubuntu-latest
     strategy:
       matrix:
         node-version: [14, 16, 18]
-      fail-fast: false
+        graphql-version: ['15.8.0', '16.6.0']
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
-      - uses: the-guild-org/shared-config/setup@main
-        name: setup env
+      - name: Install Node
+        uses: actions/setup-node@v3
         with:
-          nodeVersion: ${{ matrix.node-version }}
-          packageManager: pnpm
+          node-version: ${{ matrix.node-version }}
+
+      - name: Install pnpm
+        uses: pnpm/action-setup@v2.2.4
+        with:
+          version: 7
+
+      - name: Get pnpm store path
+        id: pnpm-store
+        run: echo "PATH=$(pnpm store path)" >> $GITHUB_OUTPUT
+
+      - name: Cache pnpm
+        uses: actions/cache@v3
+        with:
+          path: ${{ steps.pnpm-store.outputs.PATH }}
+          key: ${{ runner.os }}-pnpm-store-graphql-v${{ matrix.graphql-version }}-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-store-graphql-v${{ matrix.graphql-version }}-
+
+      - name: Set GraphQL Version
+        run: node scripts/override-graphql-version.js ${{ matrix.graphql-version }}
+
+      - name: Install Dependencies
+        run: pnpm i --no-frozen-lockfile # no frozen-lockfile because we change the resolutions
+
+      - name: Build Packages
+        run: pnpm build
+
+      - name: Run Tests
+        run: pnpm run test --ci
+
+  integration:
+    name: integration / nodejs v${{ matrix.node-version }} / graphql v${{ matrix.graphql-version }}
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [14, 16, 18]
+        graphql-version: ['15.8.0', '16.6.0']
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+
+      - name: Install Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+
+      - name: Install pnpm
+        uses: pnpm/action-setup@v2.2.4
+        with:
+          version: 7
+
+      - name: Get pnpm store path
+        id: pnpm-store
+        run: echo "PATH=$(pnpm store path)" >> $GITHUB_OUTPUT
+
+      - name: Cache pnpm
+        uses: actions/cache@v3
+        with:
+          path: ${{ steps.pnpm-store.outputs.PATH }}
+          key: ${{ runner.os }}-pnpm-store-graphql-v${{ matrix.graphql-version }}-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-store-graphql-v${{ matrix.graphql-version }}-
+
+      - name: Set GraphQL Version
+        run: node scripts/override-graphql-version.js ${{ matrix.graphql-version }}
+
+      - name: Install Dependencies
+        run: pnpm i --no-frozen-lockfile # no frozen-lockfile because we change the resolutions
 
       - name: Build Packages
         run: pnpm build
@@ -43,21 +102,43 @@ jobs:
         run: pnpm test:integration --ci
 
   leaks:
-    name: leaks / nodejs v${{ matrix.node-version }}
+    name: leaks / nodejs v${{ matrix.node-version }} / graphql v${{ matrix.graphql-version }}
     runs-on: ubuntu-latest
     strategy:
       matrix:
         node-version: [14, 16, 18]
-      fail-fast: false
+        graphql-version: ['15.8.0', '16.6.0']
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
-      - uses: the-guild-org/shared-config/setup@main
-        name: setup env
+      - name: Install Node
+        uses: actions/setup-node@v3
         with:
-          nodeVersion: ${{ matrix.node-version }}
-          packageManager: pnpm
+          node-version: ${{ matrix.node-version }}
+
+      - name: Install pnpm
+        uses: pnpm/action-setup@v2.2.4
+        with:
+          version: 7
+
+      - name: Get pnpm store path
+        id: pnpm-store
+        run: echo "PATH=$(pnpm store path)" >> $GITHUB_OUTPUT
+
+      - name: Cache pnpm
+        uses: actions/cache@v3
+        with:
+          path: ${{ steps.pnpm-store.outputs.PATH }}
+          key: ${{ runner.os }}-pnpm-store-graphql-v${{ matrix.graphql-version }}-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-store-graphql-v${{ matrix.graphql-version }}-
+
+      - name: Set GraphQL Version
+        run: node scripts/override-graphql-version.js ${{ matrix.graphql-version }}
+
+      - name: Install Dependencies
+        run: pnpm i --no-frozen-lockfile # no frozen-lockfile because we change the resolutions
 
       - name: Build Packages
         run: pnpm build
