--- a/packages/graphql-yoga/package.json
+++ b/packages/graphql-yoga/package.json
@@ -54,6 +54,7 @@
     "@envelop/validation-cache": "5.0.3",
     "@graphql-tools/executor": "0.0.6",
     "@graphql-tools/schema": "^9.0.0",
+    "@graphql-tools/utils": "^9.0.1",
     "@graphql-typed-document-node/core": "^3.1.1",
     "@graphql-yoga/subscription": "^3.0.0-next.0",
     "@whatwg-node/fetch": "0.5.1",
@@ -64,7 +65,6 @@
   "devDependencies": {
     "@envelop/disable-introspection": "4.0.3",
     "@envelop/live-query": "5.0.3",
-    "@graphql-tools/utils": "^8.12.0",
     "@jest/globals": "^29.2.1",
     "@n1ru4l/in-memory-live-query-store": "0.10.0",
     "@repeaterjs/repeater": "^3.0.4",
@@ -73,6 +73,7 @@
     "graphql-http": "^1.6.0",
     "graphql-scalars": "1.20.0",
     "html-minifier-terser": "7.0.0",
+    "json-bigint-patch": "0.0.8",
     "puppeteer": "19.2.0"
   },
   "peerDependencies": {
