--- a/packages/plugins/apollo-inline-trace/package.json
+++ b/packages/plugins/apollo-inline-trace/package.json
@@ -41,14 +41,18 @@
     "access": "public"
   },
   "peerDependencies": {
-    "graphql-yoga": "^3.0.0-next.9"
+    "@graphql-tools/utils": "^9.0.1",
+    "@whatwg-node/fetch": "^0.5.1",
+    "graphql-yoga": "^3.0.0-next.9",
+    "graphql": "^15.2.0 || ^16.0.0"
   },
   "dependencies": {
     "@envelop/on-resolve": "^2.0.2",
-    "@whatwg-node/fetch": "0.5.1",
     "apollo-reporting-protobuf": "^3.3.2"
   },
   "devDependencies": {
+    "@envelop/on-resolve": "^2.0.2",
+    "@whatwg-node/fetch": "^0.5.1",
     "graphql-yoga": "^3.0.0-next.9"
   }
 }
