--- a/packages/plugins/apq/package.json
+++ b/packages/plugins/apq/package.json
@@ -43,7 +43,11 @@
     "@whatwg-node/fetch": "0.5.1",
     "tiny-lru": "^10.0.0"
   },
+  "devDependencies": {
+    "graphql-yoga": "^3.0.0-next.9"
+  },
   "peerDependencies": {
+    "@graphql-tools/utils": "^9.0.1",
     "graphql-yoga": "^3.0.0-next.9"
   },
   "type": "module"
