--- a/.github/workflows/algolia-integrity.yml
+++ b/.github/workflows/algolia-integrity.yml
@@ -4,7 +4,7 @@ on:
     paths:
       - 'website/**'
     branches:
-      - v3
+      - main
 jobs:
   algolia-records-check:
     runs-on: ubuntu-latest
