--- a/packages/plugins/defer-stream/package.json
+++ b/packages/plugins/defer-stream/package.json
@@ -43,6 +43,9 @@
     "graphql": "^15.2.0 || ^16.0.0",
     "graphql-yoga": "^3.0.0-next.10"
   },
+  "devDependencies": {
+    "@whatwg-node/fetch": "0.5.1"
+  },
   "type": "module",
   "dependencies": {
     "@graphql-tools/utils": "^9.0.1"
