--- a/.prettierignore
+++ b/.prettierignore
@@ -13,3 +13,4 @@ pnpm-lock.yaml
 packages/graphql-yoga/src/graphiql-html.ts
 packages/graphql-yoga/src/landing-page-html.ts
 packages/render-graphiql/src/graphiql.ts
+.changeset/
