--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -21,3 +21,7 @@ jobs:
     uses: the-guild-org/shared-config/.github/workflows/changesets-dependencies.yaml@main
     secrets:
       githubToken: ${{ secrets.GUILD_BOT_TOKEN }}
+    with:
+      installDependencies: true
+      packageManager: pnpm
+      nodeVersion: 18
